// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. static import 1`] = `
"
import(\\"./Foo\\")

      ↓ ↓ ↓ ↓ ↓ ↓

import _path from \\"path\\";
import _importCss from \\"babel-plugin-universal-import/importCss.js\\";
import _universalImport from \\"babel-plugin-universal-import/universalImport.js\\";
_universalImport({
  id: \\"./Foo\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import( /* webpackChunkName: 'Foo' */\\"./Foo\\"), _importCss(\\"Foo\\")]),
  path: () => _path.join(__dirname, \\"./Foo\\"),
  resolve: () => require.resolveWeak(\\"./Foo\\"),
  chunkName: () => \\"Foo\\"
});
"
`;

exports[`2. static import (with relative paths) 1`] = `
"
import(\\"../../Foo\\")

      ↓ ↓ ↓ ↓ ↓ ↓

import _path from \\"path\\";
import _importCss from \\"babel-plugin-universal-import/importCss.js\\";
import _universalImport from \\"babel-plugin-universal-import/universalImport.js\\";
_universalImport({
  id: \\"../../Foo\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import( /* webpackChunkName: 'Foo' */\\"../../Foo\\"), _importCss(\\"Foo\\")]),
  path: () => _path.join(__dirname, \\"../../Foo\\"),
  resolve: () => require.resolveWeak(\\"../../Foo\\"),
  chunkName: () => \\"Foo\\"
});
"
`;

exports[`3. static import (with file extension) 1`] = `
"
import(\\"./Foo.js\\")

      ↓ ↓ ↓ ↓ ↓ ↓

import _path from \\"path\\";
import _importCss from \\"babel-plugin-universal-import/importCss.js\\";
import _universalImport from \\"babel-plugin-universal-import/universalImport.js\\";
_universalImport({
  id: \\"./Foo.js\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import( /* webpackChunkName: 'Foo' */\\"./Foo.js\\"), _importCss(\\"Foo\\")]),
  path: () => _path.join(__dirname, \\"./Foo.js\\"),
  resolve: () => require.resolveWeak(\\"./Foo.js\\"),
  chunkName: () => \\"Foo\\"
});
"
`;

exports[`4. static import (string template) 1`] = `
"
import(\`./base\`)

      ↓ ↓ ↓ ↓ ↓ ↓

import _path from \\"path\\";
import _importCss from \\"babel-plugin-universal-import/importCss.js\\";
import _universalImport from \\"babel-plugin-universal-import/universalImport.js\\";
_universalImport({
  id: \\"./base\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import( /* webpackChunkName: 'base' */\`./base\`), _importCss(\`base\`)]),
  path: () => _path.join(__dirname, \`./base\`),
  resolve: () => require.resolveWeak(\`./base\`),
  chunkName: () => \`base\`
});
"
`;

exports[`5. static import (string template + relative paths) 1`] = `
"
import(\`../../base\`)

      ↓ ↓ ↓ ↓ ↓ ↓

import _path from \\"path\\";
import _importCss from \\"babel-plugin-universal-import/importCss.js\\";
import _universalImport from \\"babel-plugin-universal-import/universalImport.js\\";
_universalImport({
  id: \\"../../base\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import( /* webpackChunkName: 'base' */\`../../base\`), _importCss(\`base\`)]),
  path: () => _path.join(__dirname, \`../../base\`),
  resolve: () => require.resolveWeak(\`../../base\`),
  chunkName: () => \`base\`
});
"
`;

exports[`6. dynamic import (string template) 1`] = `
"
import(\`./base/\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

import _path from \\"path\\";
import _importCss from \\"babel-plugin-universal-import/importCss.js\\";
import _universalImport from \\"babel-plugin-universal-import/universalImport.js\\";
_universalImport({
  id: \\"./base/\${page}\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import( /* webpackChunkName: 'base/[request]' */\`./base/\${page}\`), _importCss(\`base/\${page}\`)]),
  path: () => _path.join(__dirname, \`./base/\${page}\`),
  resolve: () => require.resolveWeak(\`./base/\${page}\`),
  chunkName: () => \`base/\${page}\`
});
"
`;

exports[`7. dynamic import (string template - dynamic at 1st segment) 1`] = `
"
import(\`./\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

import _path from \\"path\\";
import _importCss from \\"babel-plugin-universal-import/importCss.js\\";
import _universalImport from \\"babel-plugin-universal-import/universalImport.js\\";
_universalImport({
  id: \\"./\${page}\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import( /* webpackChunkName: '[request]' */\`./\${page}\`), _importCss(\`\${page}\`)]),
  path: () => _path.join(__dirname, \`./\${page}\`),
  resolve: () => require.resolveWeak(\`./\${page}\`),
  chunkName: () => \`\${page}\`
});
"
`;

exports[`8. dynamic import (string template + relative paths) 1`] = `
"
import(\`../../base/\${page}\`)

      ↓ ↓ ↓ ↓ ↓ ↓

import _path from \\"path\\";
import _importCss from \\"babel-plugin-universal-import/importCss.js\\";
import _universalImport from \\"babel-plugin-universal-import/universalImport.js\\";
_universalImport({
  id: \\"../../base/\${page}\\",
  file: \\"currentFile.js\\",
  load: () => Promise.all([import( /* webpackChunkName: 'base/[request]' */\`../../base/\${page}\`), _importCss(\`base/\${page}\`)]),
  path: () => _path.join(__dirname, \`../../base/\${page}\`),
  resolve: () => require.resolveWeak(\`../../base/\${page}\`),
  chunkName: () => \`base/\${page}\`
});
"
`;

exports[`9. await import() should receive a thennable without calling .then 1`] = `
"
async ({ page }) => await import(\`../components/\${page}\`);

      ↓ ↓ ↓ ↓ ↓ ↓

import _importCss from \\"babel-plugin-universal-import/importCss.js\\";
import _universalImport from \\"babel-plugin-universal-import/universalImport.js\\";
async ({ page }) => await _universalImport(() => Promise.all([import( /* webpackChunkName: 'components/[request]' */\`../components/\${page}\`), _importCss(\`components/\${page}\`)]), false);
"
`;
